--- a/src/App.scss
+++ b/src/App.scss
@@ -57,3 +57,6 @@ align-items: flex-start;
 .b-theme-classic-material .b-has-label label {
     color: #616161;
 }
+// .b-sch-style-plain  {
+// max-height: 30px;
+// }
