--- a/src/App.scss
+++ b/src/App.scss
@@ -57,6 +57,9 @@ align-items: flex-start;
 .b-theme-classic-material .b-has-label label {
     color: #616161;
 }
+.b-scheduler-3 {
+    height: 40%;
+}
 // .b-sch-style-plain  {
 // max-height: 30px;
 // }
