--- a/src/elements/popup/Popup.scss
+++ b/src/elements/popup/Popup.scss
@@ -40,6 +40,9 @@
     article {
         flex : 1;
         padding : 1em;
+        .details {
+            margin-left: 8px;
+        }
     }
 
     footer {
