fixed bug with line in edit brik

--- a/src/elements/popup/Popup.scss
+++ b/src/elements/popup/Popup.scss
@@ -12,6 +12,7 @@
     bottom           : 0;
     margin           : auto;
     background-color : rgba(0,0,0, 0.5);
+    z-index: 11;
 }
 .popup {
     position      : absolute;
