--- a/src/App.scss
+++ b/src/App.scss
@@ -97,7 +97,7 @@ border-bottom: 1px solid rgb(182, 182, 182);
 
 .eventWrapper
 {
-    border: dotted 2px rgba(255, 136, 0, 1);
+    // border: dashed 4px rgb(0, 4, 255);
     box-sizing: border-box;
     // z-index: 6;
 }
