--- a/src/App.scss
+++ b/src/App.scss
@@ -97,7 +97,7 @@ border-bottom: 1px solid rgb(182, 182, 182);
 
 .eventWrapper
 {
-    // border: dashed 4px rgb(0, 4, 255);
+    border: dotted 2px rgb(255, 0, 0);
     box-sizing: border-box;
     // z-index: 6;
 }
